[workspace]

members = [
    "projects/backyard",
    "projects/collections",
    "projects/control_flow",
    "projects/enum-pattern-matching",
    "projects/functions",
    "projects/guessing_game",
    "projects/ownership",
    "projects/structs",
    "projects/rectangles",
    "projects/my-project",
    "projects/restaurant",
]
