[workspace]

workspace.resolver = "2"

members = [
    "projects/backyard",
    "projects/collections",
    "projects/control_flow",
    "projects/enum-pattern-matching",
    "projects/functions",
    "projects/guessing_game",
    "projects/my-project",
    "projects/ownership",
    "projects/rectangles",
    "projects/structs",
    "projects/restaurant",
    "projects/hash-map",
]
